cmake_minimum_required(VERSION 2.6)
project(testclient)
set(testclient_SOURCES main.cpp window.cpp)
set(testclient_HEADERS window.h)
qt_wrap_ui(testclient_UI_SRCS window.ui)
add_executable(testclient ${testclient_SOURCES} ${testclient_HEADERS} ${testclient_UI_SRCS})
target_link_libraries(testclient ${QT_LIBRARIES})
set_target_properties(testclient PROPERTIES AUTOMOC TRUE)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
