cmake_minimum_required(VERSION 2.6)
project(socketapiclient)
set(socketapiclient_SOURCES main.cpp window.cpp)
set(socketapiclient_HEADERS window.h)
qt_wrap_ui(socketapiclient_UI_SRCS window.ui)
add_executable(socketapiclient ${socketapiclient_SOURCES} ${socketapiclient_HEADERS} ${socketapiclient_UI_SRCS})
target_link_libraries(socketapiclient ${QT_LIBRARIES})
set_target_properties(socketapiclient PROPERTIES AUTOMOC TRUE)
qt5_use_modules(socketapiclient Widgets Network)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set_target_properties(socketapiclient PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
